docs/style/index.css
@import url('cookie-confirm.css') screen;

body {
  height: 100%;
  width: 100%;
  margin: 0;
}

.container {
  margin-right: auto;
  margin-left: auto;
  padding-left: 20px;
  padding-right: 20px;
}

.onto-teaser {
  display: none;
}

.banner {
  width: 100%;
}

.banner h1, .banner h2, .banner img{
  padding: 0;
  margin: 0px 20px;
  vertical-align: middle;
  text-align: center;
}

.banner h1{
  font-size: 300%;
}

.banner h2{
  font-size: 150%;
}

.onto_container
{
  margin-right: auto;
  margin-left: auto;
  padding-left: 20px;
  padding-right: 20px;
  width: 1180px;
}

.article {
  margin-top: 20px;
  margin-bottom: 20px;
}

#nav {
  z-index: 1000000;
  position: absolute;
  width: 100%;
  transition: all 0.5s ease;
}

.navbar {
  position: relative;
  min-height: 50px;
  margin-bottom: 20px;
  border: 1px solid transparent;
      border-top-color: transparent;
      border-right-color: transparent;
      border-bottom-color: transparent;
      border-left-color: transparent;
}

.navbar-default {
  background-color: #324a5e;
  border-color: #324a5e;
}

.navbar-default .navbar-brand,
.navbar-default .navbar-nav > li > a  {
  color: #fff;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-nav > li > a:hover  {
  color: #ccc;
}

.navbar-brand img {
  width: auto;
  height: 20px;
  -webkit-filter: invert(1);
   filter: invert(1);
}

.navbar-brand > img {
  display: inline;
  margin-right: 10px;
}

.nav > li > a {
  position: relative;
  display: block;
  padding: 10px 15px;
}

.nav::before {
  content: " ";
  display: table;
}

.jumbotron {
  background: url(../images/background.png) no-repeat center center;
      background-size: auto;
  background-size: cover;
  padding-bottom: 5px;
  padding: 0;
}

.jumbotron {
  margin-top: 50px;
}

.jumboopaque {
  padding: 20px;
  background-color: rgba(240, 240, 240, 0.75);
}

.github-icon {
  margin-top: -6px;
  width: 18px;
  height: 20px;
  -webkit-filter: invert(1);
   filter: invert(1);
}

.btn-custom {
  color: #ffffff;
  background-color: #808282;
  border-color: #808282;
}

.btn-custom:hover {
  color: #eeeeee;
  background-color: #707272;
  border-color: #707272;
}

.jumbo-list {
  padding-left: 0px;
}

.jumbo-list-item {
  padding: 10px;
  min-width: 100px !important;
  display: inline-block;
  text-transform: uppercase;
  font-size: 16px;
}

.onto-content h1 {
  border-left: 5px solid #324a5e;
  border-bottom: 2px solid #324a5e;
  padding-left: 10px;
}

.onto-grid-item {
  height: 200px;
  margin-bottom: 40px;
  background-size: contain;
  background-position: center;
  position: relative;
  overflow: hidden;
  transition: all 0.5s ease;
  background-repeat: no-repeat;
}

.onto-grid-item:hover .onto-grid-item-title {
    right: -190px;
}

.onto-grid-item:hover .onto-grid-item-menu {
    left: 0px;
}

.onto-grid-item-content {
    width: 100%;
    background-color: rgba(150, 150, 150, 0.3);
    height: 100%;
    transition: all 0.5s ease;
}

.onto-grid-print-img {
  display: none;
}

.onto-grid-item-title {
  background-color: #324a5e;
  max-width: 80%;
  padding: 5px 20px;
  top: 0px;
  position: absolute;
  right: 0px;
  transition: all 1.0s ease;
}

.onto-grid-item-title h4 {
  color: #fff;
}

.onto-grid-item-menu {
  width: 215px;
  height: 200px;
  background-color: #808282;
  position: absolute;
  left: -190px;
  transition: all 1.0s ease;
}

.onto-grid-item-menu .glyphicon {
  position: absolute;
  right: 5px;
  top: 90px;
  color: #fff;
}

.onto-grid-item-menu ul {
  list-style: none;
  padding: 0;
  width: 190px;
  overflow: hidden;
}

.onto-grid-item-menu li {
  height: 50px;
  line-height: 50px;
  transition: all 0.25s ease;
  font-size: 2rem;
  padding: 0 20px;
  color: #fff;
}

.onto-grid-item-menu li a {
  color: #ffffff;
  text-decoration: none;
  width: 100%;
  height: 100%;
  display: inline-block;
}

.onto-grid-item-link {
  width: 100%;
  height: 100%;
  display: block;
}

footer {
  line-height:1;
  font-family:Arial, Helvetica, sans-serif;
  font-weight:400;
  transition-duration:1s;
  font-size: 16px;
  background-color:#324a5e;
  color:#ffffff;
  height: 80px;
  padding: 10px;
}

a.laas_logo {
  color:#ffffff;
  margin: auto auto auto auto;
  position:relative;
}

@media (min-width: 768px) {
  .container {
    width: 760px;
  }

  .onto-teaser {
    display: inline;
  }

  .navbar-nav {
    float: left;
    margin: 0;
  }

  .navbar {
    border-radius: 0;
  }

  .navbar-nav > li > a {
    padding-top: 15px;
    padding-bottom: 15px;
  }
}

@media (min-width: 992px) {
  .container {
    width: 980px;
  }
}

@media (min-width: 1200px) {
  .container {
    width: 1180px;
  }
}

